トルコ国際紛争

--- a/localisation/TR_decisions/japanese/RUS_diplomat_d_l_japanese.yml
+++ b/localisation/TR_decisions/japanese/RUS_diplomat_d_l_japanese.yml
@@ -5,4 +5,10 @@
  RUS_spa_add_factory: "ロシア資本による工場提供"
  RUS_spa_build_bank: "スペインへの計画的資本投下"
 
+ RUS_europe_diplo_c:"欧州外交"
+ RUS_europe_diplo_c_desc:"欧州で広がる共産主義の波は、我々の尽力むなしく留まるところを知らない。大規模な反共の枠組みを立ち上げ、ロシアが率先して防波堤となることが、欧州存続の唯一の糸口となるだろう。"
+ 
+ RUS_ankara_treaty_1:"アンカラ条約第三章の再確認"
+ RUS_ankara_treaty_1_desc:"アンカラ条約で取り決められるところにより、戦後に開発されるトルコ東部の全ての資源はロシア帝国に無料で輸送される。彼らはその条約を無視した採掘を行っているため、再確認のために軍を派遣しよう。"
+
  TR_Russia.1.t:"a"
