--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -121,3 +121,28 @@
  TR_Russia_news.12.d:"イランでは古の帝国が蘇ろうとしている。\nロシア側の軍は完全に敗走を続ける中、意外にも破竹の勢いで進軍しているイラン軍は、途中で古のペルシャ帝国への回帰を宣言した。\nモスクワが燃える前に我々に従え。という強い態度で停戦協定に臨んだペルシャは、コーカサスや中央アジアを割譲させ、最終的には先の大戦争でロシア帝国が得た中東の国家までも移管させた。\nアケネメス朝の復古主義に燃えるペルシャ帝国は、既に他地域の攻撃まで行う準備をしており、これに対しイギリス領インドを持つ英国は深い懸念を示している。"
  TR_Russia_news.12.a:"これが帝国か"
  TR_Russia_news.12.b:"マケドニアを滅ぼさん"
+
+
+
+
+
+
+ TR_Russia_diplo.1.t:"ロシアからの厳重な警告！"
+ TR_Russia_diplo.1.d:"ロシア代表団と軍関係者によって構成される複数の外交使節が我が国の政務官に重大な懸念を示した。アンカラ条約に指定される採掘事業の委譲が行われていないことに対する懸念としており、我々に対して直ちに遅滞なくこの地域の採掘事業を委譲するよう求めている。"
+ TR_Russia_diplo.1.a:"軍を派遣しろ！"
+ TR_Russia_diplo.1.b:"引き下がるしかない。"
+
+ TR_Russia_diplo.2.t:"トルコが拒否！"
+ TR_Russia_diplo.2.d:"トルコ政府は愚かにも我が国の「外交的」な要求に対して反発し、我が国がかつて勝利したことを忘れたかのような反応をしている。彼らを叩き潰さなければならない！"
+ TR_Russia_diplo.2.a:"武器を取れ！"
+
+ TR_Russia_diplo.3.t:"トルコが承諾"
+ TR_Russia_diplo.3.d:"トルコ政府は利口にもこの地域における採掘権の委譲に関する詳細を外交的に伝えてきた。すでにこの地には非武装の産業顧問が向かっている。"
+ TR_Russia_diplo.3.a:"ありがたい。"
+
+ TR_Russia_diplo.4.t:"カイセリでロシアが勝利"
+ TR_Russia_diplo.4.d:"トルコ軍とロシア軍の緊迫した国境紛争は、ロシアの勝利に終わった。トルコ側はこれによって強制的に資源を徴収されることとなるが、現地の軍の損耗は激しく、トルコ側の反撃の余地はもはやない。トルコは、ロシアの要求通りこの地域の資源を供出した。"
+ TR_Russia_diplo.5.t:"カイセリでトルコが勝利"
+ TR_Russia_diplo.5.d:"トルコ軍とロシア軍の緊迫した国境紛争は、ロシアの敗北に終わった。トルコ側は独立を守った軍隊の凱旋などで、国民の士気向上に利用している。"
+ TR_Russia_diplo.4.a:"当然の結果だ。"
+ TR_Russia_diplo.4.b:"なんと脆弱な！"
