--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -14,7 +14,7 @@
   TR_Russia_per_tt.2: "§R国際社会からの強い批判を受けることになる。§!"
   TR_Russia_per_tt.3: "§Yイラン§!は戦勝点の§R6割§!を失うと降伏するだろう！"
   TR_Russia_per_tt.4: "§Yロシア§!は§Rツァリーツィン§!、§Rロストフ§!、§Rバクー§!を失うと降伏するだろう！"
-  TR_Russia.tt.6: "§Yカルリスタ勢力§!に対して5個の§Gロシア人義勇軍連隊§!を送る。"
+
 
   TR_Russia_per_peace_tt.1: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Yテヘラン§!は§Gロシア帝国§!の民政管理地区として§R非武装化§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。\n§Rイラン§!は§Gロシア帝国§!に賠償金を支払う。"
   TR_Russia_per_peace_tt.1_1: "§Yダブリーズ§!、§Yギーラーン§!、§Yサムナーン§!、§Yホラーサーン§!は§Gロシア帝国§!の直轄保護領として§R併合§!される。\n§Rイラン§!は国家再建のために§Gロシア帝国§!の§R保護領§!となる。"
@@ -24,9 +24,9 @@
 
   TR_Russia.tt.6: "§Yモスクワ§!によく訓練された3師団による§G親衛戦車軍団§!を編成する！"
   TR_Russia.tt.8: "§Y全ての司令官§!のスキルレベル、攻撃レベル、補給レベルが§G1§!上がる。"
+  TR_Russia.tt.9: "§Yカルリスタ勢力§!に対して5個の§Gロシア人義勇軍連隊§!を送る。"
 
-
-
+  TR_Russia_diplo.tt.1:"ロシアは軍を動員し、§R国境での紛争に発展するだろう！§!"
 
 
   TR_Persia_tt.1: "§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
