--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -49,7 +49,6 @@
  rexism_desc: "レクシズムは自由主義・共産主義の理念と対立する思想であり、コーポラティズム的経済政策を主張する忠実な保守主義・国家主義的運動である。次第にポピュリズム的、権威主義的なレトリックを採用しながら、この思想は他のファシズム運動に接近している。"
  neutrality: "中道主義"
  neutrality_noun: "中道主義"
- theocracy: "神権主義"
  neutrality_desc: "権威主義政権"
  despotism: "専制政治"
  despotism_desc: "専制政治は絶対的な権力を握る一人の人物によって統治される政体である。"
@@ -59,8 +58,33 @@
  moderatism_desc: "穏健主義は穏やかな位置またはやり方をとることによって左右の両極端を避ける政体である。"
  centrism: "穏健主義"
  centrism_desc: "穏健主義は適切に現在と未来のニーズに対処する常識的な解決策の実現を望む政府の一形態である。そしてこれは国民の負託を支えとしてこれらのニーズの状況におけるリスクと許容量を考慮し、公益を提供する。"
+ theocracy: "神権主義"
  anarchism: "無政府主義"
  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
+ anarchist_communism: "無政府共産主義"
+ catholicism: "カトリック"
+ protestantism: "プロテスタント"
+ orthodoxy: "正教"
+ adamism: "アダム派"
+ hussites: "フス派"
+ shia_islamism: "シーア派"
+ sunni_islamism: "スンニ派"
+ judaism: "ユダヤ教"
+ mahayana_buddhism: "大乗仏教"
+ theravada_buddhism: "上座部仏教"
+ hinduism: "ヒンドゥー教"
+ animism: "精霊信仰"
+ shintoism: "神道"
+ zoroastrianism: "ゾロアスター教"
+ roman_polytheism: "ローマ多神教"
+ greek_polytheism: "ギリシャ多神教"
+ confucianism: "儒教"
+ hedonism: "快楽主義"
+ mysticism: "神秘主義"
+ cosmopolitanism: "宇宙主義"
+ satanism: "悪魔崇拝"
+ political_correctness: "政治的正義"
+ veganism: "菜食主義"
  anarchism_party: "無政府主義評議会"
  socialism_party: "社会党"
  socialdemocratic_party: "社会民主党"
