--- a/localisation/TR_decisions/japanese/RUS_diplomat_d_l_japanese.yml
+++ b/localisation/TR_decisions/japanese/RUS_diplomat_d_l_japanese.yml
@@ -10,5 +10,8 @@
  
  RUS_ankara_treaty_1:"アンカラ条約第三章の再確認"
  RUS_ankara_treaty_1_desc:"アンカラ条約で取り決められるところにより、戦後に開発されるトルコ東部の全ての資源はロシア帝国に無料で輸送される。彼らはその条約を無視した採掘を行っているため、再確認のために軍を派遣しよう。"
+ RUS_buy_bornholm_island:"§Yボーンホルム島§!の購入"
+ RUS_buy_bornholm_island_desc:"ボーンホルム島は我が国にとって戦略的に必要な土地だ。この土地を§Yバルト海沿岸の鉄資源§!と引き換えに購入できないか打診する。"
+ RUS_ser_build_industrial_complex:"§Yセルビア§!での民需工場建設"
 
  TR_Russia.1.t:"a"
