--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -162,3 +162,7 @@
  TR_Russia_diplo.9.t:"ロシアによる工場！"
  TR_Russia_diplo.9.d:"ロシアが建設していた民需工場が遂に完成した。我々が軍需生産力を向上させる中、手が回らない範囲において支援した彼らに謝辞を述べなければならない。"
  TR_Russia_diplo.9.a:"深く感謝する。"
+
+ TR_Russia_diplo.10.t:"ロシアによる経済支援"
+ TR_Russia_diplo.10.d:"ロシアは先日、我が国に対して長期的な投資を行うプランがあることを発表した。これによって我が国の経済状況は著しく改善し、さらなる経済成長が期待できるだろう！"
+ TR_Russia_diplo.10.a:"深く感謝する。"
