--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -51,5 +51,6 @@
  RUS_spa_tsar_bank:"ロシアの資本投下"
  RUS_spa_tsar_bank_rus:"スペインへの投資"
  
-
+ RUS_money_by_Russia:"ロシアによる産業支援"
+ RUS_money_by_Russia_desc:"この国はロシアから多くの支援を受け取っている。"
 
