--- a/localisation/japanese/parties_l_japanese.yml
+++ b/localisation/japanese/parties_l_japanese.yml
@@ -62,6 +62,7 @@
  anarchism: "無政府主義"
  anarchism_desc: "無政府主義とは、権威そのものを拒否することであり、社会を単一の中央集権国家ではなく、自己管理と自治の集団に分割することを促進するものである。"
  anarchist_communism: "無政府共産主義"
+ libertarianism: "リバタリアニズム"
  catholicism: "カトリック"
  protestantism: "プロテスタント"
  orthodoxy: "正教"
