--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -166,3 +166,16 @@
  TR_Russia_diplo.10.t:"ロシアによる経済支援"
  TR_Russia_diplo.10.d:"ロシアは先日、我が国に対して長期的な投資を行うプランがあることを発表した。これによって我が国の経済状況は著しく改善し、さらなる経済成長が期待できるだろう！"
  TR_Russia_diplo.10.a:"深く感謝する。"
+
+ TR_Russia_diplo.11.t:"ロシアが防共協定の締結を求める！"
+ TR_Russia_diplo.11.d:"ロシアの代表団によると、共産主義勢力から世界を守るための条約に我が国が締結することを望んでいるらしい。この条約に同意すれば、第三インターナショナルの国家へ資源の輸出ができなくなる。我々はどのような対応をするのが適切だろうか？"
+ TR_Russia_diplo.11.a:"加盟しよう。"
+ TR_Russia_diplo.11.b:"遠慮しておく。"
+
+ TR_Russia_diplo.12.t:"[FROM.GetName]が防共協定に加盟！"
+ TR_Russia_diplo.12.d:"[FROM.GetName]の外務担当者は我が国の協定の内容に同意し、賛同する旨を伝えてきた。この地域における共産主義の拡大を望まないのは我が国と同じ思いであるという表明であり、我々に迫る共産主義の波にともに対抗する力強い仲間となるだろう。"
+ TR_Russia_diplo.12.a:"ようこそ！"
+
+ TR_Russia_diplo.13.t:"[FROM.GetName]が防共協定を拒否"
+ TR_Russia_diplo.13.d:"[FROM.GetName]の外務担当者は愚かにも、我が国の防共協定の提案を拒否し、交渉を打ち切ると伝えてきた。これはかの国の政府がすでに共産主義に侵食されていることの確固たる証拠であり、この国もいずれ共産主義に飲み込まれてしまうだろう。我々はそれを黙って見ることしかできないようだ。"
+ TR_Russia_diplo.13.a:"愚か者め！"
