--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -54,3 +54,6 @@
  RUS_money_by_Russia:"ロシアによる産業支援"
  RUS_money_by_Russia_desc:"この国はロシアから多くの支援を受け取っている。"
 
+ RUS_anti_commune_pact:"§2防共協定加盟国§!"
+ RUS_anti_commune_pact_desc:"この国はロシアを中心とする§R防共協定§!に加盟している。"
+ RUS_antipact.tt:"§R社会主義§!より左派への外交の寛容: §R-40§!\n§R社会主義§!より左派の日毎の支持率: §R-0.02§!"
