--- a/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
+++ b/localisation/TR_tooltips/japanese/tooltips_l_japanese.yml
@@ -28,6 +28,7 @@
 
   TR_Russia_diplo.tt.1:"ロシアは軍を動員し、§R国境での紛争に発展するだろう！§!"
   TR_Russia_diplo.tt.2:"我が国は§Yボーンホルム§!を失うが、引き換えに多くの資源を得る。"
+  TR_Russia_diplo.tt.3:"§Rインターナショナル§!全体に対して禁輸を行う！"
 
 
   TR_Persia_tt.1: "§Gロシア§!から略奪した機器とバクーの施設を工場に転換する！"
