--- a/localisation/TR_decisions/japanese/RUS_diplomat_d_l_japanese.yml
+++ b/localisation/TR_decisions/japanese/RUS_diplomat_d_l_japanese.yml
@@ -13,5 +13,6 @@
  RUS_buy_bornholm_island:"§Yボーンホルム島§!の購入"
  RUS_buy_bornholm_island_desc:"ボーンホルム島は我が国にとって戦略的に必要な土地だ。この土地を§Yバルト海沿岸の鉄資源§!と引き換えに購入できないか打診する。"
  RUS_ser_build_industrial_complex:"§Yセルビア§!での民需工場建設"
+ RUS_allies_anti_pact:"§Y連合国§!を防共協定に招待"
 
  TR_Russia.1.t:"a"
