日本語化追加

--- a/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_JAP_events_l_japanese.yml
@@ -66,6 +66,14 @@
  TR_japan.18.t: "首相撃たれるも軽傷で済む"
  TR_japan.18.d: "幸いなことに血盟団の撃った弾丸は首相の内臓を傷つけることなく抜けていたようであり、命に別状はないようだ。"
  TR_japan.18.a: "無事で何よりだ。"
+ TR_japan.20.t: "戦艦か空母か"
+ TR_japan.20.d: "現在帝国海軍は新たな主力艦の設計に取り掛かったいる。しかし、ここで問題が発生する。設計すべき主力艦の看守についてである。大艦巨砲主義者は戦艦の設計を優先すべきと主張し、航空主兵論者は空母の設計を優先すべきと語る。しかし、我が帝国には両者を整備する余裕などなく、どちらかに注力しなければならない。どちらが次世代の八八艦隊となりうるだろうか？"
+ TR_japan.20.a: "戦艦だ。"
+ TR_japan.20.b: "空母だ"
+ TR_japan.21.t: "巡洋艦か駆逐艦か"
+ TR_japan.21.d: "主力艦隊を護衛し、帝国海軍の量的主力を担う、直衛艦の設計を決定した。しかし、海軍当局は巡洋艦と駆逐艦のどちらを先に設計すべきか意見が割れている。大艦巨砲主義者は艦隊決戦時に敵駆逐艦を蹂躙する巡洋艦を希望し、航空主兵論者は空母の護衛用に対空駆逐艦を希望している。どちらがより優先度が高いだろうか。"
+ TR_japan.21.a: "巡洋艦だ"
+ TR_japan.21.b: "駆逐艦だ。"
  TR_japan.22.t: "日本航空の未来"
  TR_japan.22.d: "同盟国イギリスからの技術支援を受けて生まれた日本航空機の卵は無事に孵化したようだ。これまでの歴史には日本航空に携わってすべての人間によって紡がれてきた一本のか細く、しかし確かな糸が見えてくる。我が国はもはや欧米列強を凌駕する先進的な航空機技術を獲得してのだ。"
  TR_japan.22.a: "この糸はいつまでも紡がれるだろう"
@@ -91,6 +99,68 @@
  TR_japan.31.d: "内政問題を片付け他国に介入できる用意が生まれた大日本帝国だが、我々はどのような立場で国際社会に介入すべきだろうか。"
  TR_japan.31.a: "他の列強と協力し、国際秩序を守れ！"
  TR_japan.31.b: "帝国にふさわしい勢力圏を形成する！"
+ TR_japan.32.t: "日米同盟"
+ TR_japan.32.d: "太平洋を越えた極東の帝国から興味深い提案が来た。なんでも我がアメリカ合衆国と大日本帝国との間で同盟を作ろうというらしい。我が合衆国の外交方針は「モンロー主義」だがこの先の読めない国際情勢下、我が国に匹敵する軍備を持つかの国との同盟は悪くない。"
+ TR_japan.32.a: "共通の課題に対して両国が協力することは、われわれが世界に関与する上での重要な一部となる"
+ TR_japan.32.b: "黄禍論を忘れたのか！？"
  TR_japan.33.t: "人種差別撤廃条約を提案"
  TR_japan.33.d: "帝国は国際社会に責任を持つ列強であり、有色人種唯一の列強国である。我々は彼らを代表して人種差別撤廃条約を提案しなければならない。いかなる人種であろうとも同じ人間である以上差別など許されないのは自明の理だ。外務省は現在の同盟国間でのパワーバランスから認められるだろうとの分析を示している。"
  TR_japan.33.a: "早速同盟国に提案してみよう。"
+ TR_japan.34.t: "同盟国からの提案"
+ TR_japan.34.d: "我が国の同盟国である大日本帝国から興味深い提案があった。なんでも人種差別撤廃条約の締結を希望しているらしい。この条約を認めることはかの国に対する恩義を返すことになる一方で、我が国の植民地での独立運動は活性化することになりかねない。"
+ TR_japan.34.a: "形式的には認めてやろう。"
+ TR_japan.34.b: "所詮はアジアの一国家に過ぎない。"
+ TR_japan.35.t: "同盟国からの回答"
+ TR_japan.35.d: "かの国は我が国の提案を承認した。近日中に条約が調印されるだろう。"
+ TR_japan.35.a: "外交的勝利だ！"
+ TR_japan.36.t: "同盟国からの回答"
+ TR_japan.36.d: "かの国は我が国の提案を拒絶した。所詮はアジアの国家ということだろうか？"
+ TR_japan.36.a: "臥薪嘗胆"
+ TR_japan.37.t: "日英同盟"
+ TR_japan.37.d: "我が帝国に対し、同盟を提案する国家があるらしい。極東の帝国にして、我が国と以前も同盟を結んでいた大日本帝国だ。かの帝国は古き同名を今予備が選らせようとしている。"
+ TR_japan.37.a: "日英同盟を破棄したのは間違いだった"
+ TR_japan.37.b: "そんなもの必要ない"
+ TR_japan.38.t: "陣営名？"
+ TR_japan.38.d: "日米両国は同盟の締結に同意し、新たなる陣営を形成する。さて、両国の門出にふさわしい陣営名は何だろうか？"
+ TR_japan.38.a: "太平洋条約"
+ TR_japan.38.b: "セキュリティ・ダイヤモンド"
+ TR_japan.39.t: "大日本帝国からの提案"
+ TR_japan.39.d: "大日本帝国は我が国が大東亜共栄圏に加盟することを希望しているようだ。我々はこの提案に応じるべきだろうか？"
+ TR_japan.39.a: "ああ、もちろんだとも"
+ TR_japan.39.b: "いや、お断りしよう"
+ TR_japan.40.t: "陸海軍の統合"
+ TR_japan.40.d: "健軍以来絶えず対立してきた陸海軍の統合についての議論が盛り上がっている。"
+ TR_japan.40.a: "相容れないと思うが"
+ TR_japan.40.b: "興味深い"
+ TR_japan.44.t: "大日本帝国の要求"
+ TR_japan.44.d: "大日本帝国は身分不相応なことに我が大英帝国のアジア植民地を解放することを要求している。我が国は第三インターナショナルと対峙しており、そのすきを突かれたようだ。"
+ TR_japan.44.a: "今は第三インターナショナルのほうが重要だ。"
+ TR_japan.44.b: "我が帝国の領土は寸分も侵すことはできない。"
+ TR_japan.45.t: "大日本帝国の要求"
+ TR_japan.45.d: "大日本帝国は身分不相応なことにフィリピンを解放することを要求している。我が国はもともとフィリピンの独立を計画しており、時期が前後するだけとも言える。"
+ TR_japan.45.a: "もともと独立させる予定の土地だ。"
+ TR_japan.45.b: "売られた喧嘩は買うのが、ヤンキー魂だ。"
+ TR_japan.46.t: "大日本帝国の要求"
+ TR_japan.46.d: "大日本帝国は身分不相応なことにフランス・コミューンのアジア植民地を解放することを要求している。我が国は英露の帝国主義者と対峙しており、そのすきを突かれたようだ。"
+ TR_japan.46.a: "今は帝国主義者との対決のほうが重要だ。"
+ TR_japan.46.b: "我が国の領土は寸分も侵すことはできない。"
+ TR_japan.47.t: "大日本帝国からの提案"
+ TR_japan.47.d: "大日本帝国は我が国が大東亜共栄圏に加盟することを希望しているようだ。我々はこの提案に応じるべきだろうか？"
+ TR_japan.47.a: "ああ、もちろんだとも"
+ TR_japan.47.b: "いや、お断りしよう"
+ TR_japan.49.t: "大日本帝国の要求"
+ TR_japan.49.d: "大日本帝国は身分不相応なことに我がオランダのアジア植民地を解放することを要求している。我が国は第三インターナショナルと対峙しており、そのすきを突かれたようだ。"
+ TR_japan.49.a: "今は第三インターナショナルのほうが重要だ。"
+ TR_japan.49.b: "我が王国の領土は寸分も侵すことはできない。"
+ TR_japan.58.t: "海軍の行く末"
+ TR_japan.58.d: "帝国海軍は空母の登場から大艦巨砲主義と航空主兵論の２派閥に分かれて、政治的闘争が起こり続けている。しかし、いつまでも帝国海軍が分裂していては陸軍の連中に介入される口実を作るだけだ。正しいかどうかは置いておいて帝国海軍の戦略を統一しなければならない。"
+ TR_japan.58.a: "大艦巨砲主義だ"
+ TR_japan.58.b: "航空主兵論だ"
+ TR_japan.59.t: "日比谷焼き討ち事件"
+ TR_japan.59.d: "我が帝国が大韓帝国に対して、予想だにしなかった敗北をしたことに対して、国民の不満が爆発している。各地で暴動が発生しており、通常の警察任務にも支障が出ている模様だ。"
+ TR_japan.59.a: "戒厳令を出せ。"
+ TR_japan.59.b: "通常通りで構わない。"　
+ TR_japan.60.t: "戒厳令の実行"
+ TR_japan.60.d: "帝国全土に戒厳令が敷かれた。しかし、戒厳令の実行役について内閣内で議論が紛糾している。"
+ TR_japan.60.a: "警察に任せろ"
+ TR_japan.60.b: "陸軍が適任だ。"
