チェコ革命関連

--- a/localisation/TR_events/japanese/TR_czech_revolution_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_czech_revolution_events_l_japanese.yml
@@ -1,35 +1,48 @@
 ﻿l_japanese:
- TR_czech_revolution.1.t: "プラハ暴動"
- TR_czech_revolution.1.a: "軍隊を動員せよ"
- TR_czech_revolution.1.b: "彼らの要求を聞いてみよう"
+ TR_czech_revolution.1: "チェコ革命"
+ TR_czech_revolution.1.t: "チェコ革命"
+ TR_czech_revolution.1.d: "革命だ！！共産主義者どもが国に反旗を翻した！"
+ TR_czech_revolution.1.a: "彼らに政権を引き渡そう..."
+ TR_czech_revolution.1.b: "鎮圧せよ！"
 
- TR_czech_revolution.2.t: "要求-自由選挙"
- TR_czech_revolution.2.a: "選挙権を制限するならば..."
- TR_czech_revolution.2.b: "権力を明け渡すつもりはない"
+ TR_czech_revolution.2: "チェコ革命の失敗"
+ TR_czech_revolution.2.t: "チェコ革命の失敗"
+ TR_czech_revolution.2.d: "我々の優秀な秘密警察が共産主義者どもの反乱を事前に阻止した！"
+ TR_czech_revolution.2.a: "反乱軍は事前に鎮圧された"
 
- TR_czech_revolution.3.t: "要求-財閥"
- TR_czech_revolution.3.a: "部分的に民営化しよう"
- TR_czech_revolution.3.b: "財閥は我々の生命線だ"
+ TR_czech_revolution.3: "チェコ内戦！"
+ TR_czech_revolution.3.t: "チェコ内戦！"
+ TR_czech_revolution.3.d: "我々の鎮圧の目論見は失敗しチェコは内戦状態となった.."
+ TR_czech_revolution.3.a: "恐ろしい..."
 
- TR_czech_revolution.4.t: "要求-政治犯の釈放"
- TR_czech_revolution.4.a: "仕方あるまい..."
- TR_czech_revolution.4.b: "奴らはテロリストだ"
+ TR_czech_revolution.4: "鎮圧成功"
+ TR_czech_revolution.4.t: "鎮圧成功"
+ TR_czech_revolution.4.d: "我々は早期に要所を抑え反乱軍を壊滅させることに成功した"
+ TR_czech_revolution.4.a: "ひとまず内戦は阻止された..."
 
- TR_czech_revolution.5.t: "合意成功"
- TR_czech_revolution.5.a: "ひとまず収まった"
+ TR_czech_revolution.5: "共産主義者が政権を掌握！"
+ TR_czech_revolution.5.t: "共産主義者が政権を掌握！"
+ TR_czech_revolution.5.d: "政権を引き渡した結果共産主義者が政権を掌握した"
+ TR_czech_revolution.5.a: "これでよいのだ..."
 
- TR_czech_revolution.6.t: "合意失敗"
- TR_czech_revolution.6.a: "戦いは続く..."
+#GERの反応
+ TR_czech_revolution.6: "チェコで内戦！"
+ TR_czech_revolution.6.t: "チェコで内戦！"
+ TR_czech_revolution.6.d: "チェコで内戦で発生した。この要地を確保するためにも我々は介入すべきだろう。"
+ TR_czech_revolution.6.a: "介入しよう"
 
- TR_czech_revolution.7.t: "鎮圧成功"
- TR_czech_revolution.7.a: "素晴らしい"
+#失敗編GER
+ TR_czech_revolution.7: "チェコ革命の失敗"
+ TR_czech_revolution.7.t: "チェコの失敗"
+ TR_czech_revolution.7.d: "我々の目論見は外れ、チェコ革命は失敗に終わった！"
+ TR_czech_revolution.7.a: "舐めやがって！"
 
- TR_czech_revolution.8.t: "鎮圧失敗"
- TR_czech_revolution.8.a: "なんということだ"
+ TR_czech_revolution.8: "シレジアでスラブ人が蜂起！"
+ TR_czech_revolution.8.t: "シレジアでスラブ人が蜂起！"
+ TR_czech_revolution.8.d: "我々の目論見は外れ、チェコ革命は失敗に終わった。それどころかチェコの民族主義をむやみに刺激する結果になりシレジアでスラブ人が蜂起した！"
+ TR_czech_revolution.8.a: "ふざけやがって！くそったれのチェコ人が！"
 
- TR_czech_revolution.9.t: "チェコ革命が失敗に終わる"
- TR_czech_revolution.9.a: "即時介入せよ"
-
- TR_czech_revolution.10.t: "チェコの保護"
- TR_czech_revolution.10.a: "対等な立場であるべきだ"
- TR_czech_revolution.10.b: "自治共和国として取り込もう"
+ TR_czech_revolution.9: "ドイツで反動主義者が蜂起！"
+ TR_czech_revolution.9.t: "ドイツで反動主義者が蜂起！"
+ TR_czech_revolution.9.d: "我々の目論見は外れ、それどころか国内の反動分子ををむやみに刺激する結果になり南ドイツで人民の敵が蜂起した！"
+ TR_czech_revolution.9.a: "ありえない！"
