--- a/localisation/TR_ideas/japanese/TR_CZE_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_CZE_ideas_l_japanese.yml
@@ -20,3 +20,5 @@ TR_CZE_Pskd1: "科学の栄光"
 TR_CZE_Pskd2: "チェコの栄光"
 TR_CZE_fortress: "国家要塞化計画"
 TR_CZE_RUStank: "戦車生産への支払い"
+TR_CZE_anti: "不安定な政府"
+TR_CZE_antiGER: "反ドイツ的な感情"
