陸軍ツリー

--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -130,3 +130,78 @@
 
  RUS_alaska_development:"アラスカ調査隊"
  RUS_alaska_development_desc:"我が国の目覚ましい工業化によって、アラスカの新たな資源開発が可能となった。我々は迫りくる共産主義者と対峙するために大量の資源を必要としている。"
+
+ RUS_corp_with_church:"教会との共同"
+ RUS_corp_with_church_desc:"我が国の正教徒たちを戦争と国家のために奮い立たせるものこそ、宗教に違いない。正教会の大司教らを政治の舞台でも活動させることで、我が国はさらに強力な国家となる。"
+ RUS_law_church:"教会法"
+ RUS_law_church_desc:"我が国における教会の立場を明確に示すことで、政治的な活動を促進し、さらに我が国の信仰心を高めることもできるだろう。彼らをうまく利用するために、厳格な法律が必要かもしれない。"
+ RUS_law_war_economy:"戦争経済法"
+ RUS_law_war_economy_desc:"ロシアが共産主義との大戦争に突き進んでいることは明らかだ。国民生活や民間企業も動員して総力戦をもう一度行うためには、かつての大戦争のような大規模な戦争経済をもう一度行わなければならない。"
+ RUS_pol_industry_comp:"ポーランド民間工業の移行"
+ RUS_pol_industry_comp_desc:"ポーランドはレジスタンスによって工業が阻害されている。この地域の民間企業を政府の力によってロシア本土へ移動させることで、彼らの妨害をかいくぐることができる。"
+ RUS_pol_industry_arm:"ポーランド軍需工場の移転"
+ RUS_pol_industry_arm_desc:"ポーランドは次の大戦争で主戦場となるだろう。戦火の下で生産することは極めて困難であり、これらの工場を国家が出費して前線から離れた後方地域に移動させなければならない。"
+ RUS_holy_war:"神に捧ぐ聖戦"
+ RUS_holy_war_desc:"神は望まれている！神を信じぬ裏切り者の共産主義者とその国家を我々が破滅させることを！神を信じぬ裏切り者の統治者どもをあるべき所へ導くことを！我々は神の代理人として、この戦争に勝利しなければならない！"
+ RUS_to_the_war:"戦へ。"
+ RUS_to_the_war_desc:"我々の戦争は遂に始まる。全ての国民は各々の能力を存分に発揮し、国家総動員体制に身を捧げなければならない。全ての教育、民間事業は停止され、全ての国力は戦争へ直結するようになる！"
+ RUS_indp_army:"陸軍省の独立"
+ RUS_indp_army_desc:"陸軍省を国防省から分離させ、独自の省庁とすることで他の海軍や空軍、国境管理部などの影響を受けない大規模な作戦立案が可能になるだろう。"
+ RUS_advance_army:"陸軍の発展"
+ RUS_advance_army_desc:"我が国は大陸国家だ。四方八方に存在する脅威に対して確固たる力で対抗しなければならない。陸軍に注力することで我が国の国防力は飛躍的に上昇するだろう。"
+ RUS_law_of_army:"陸軍法"
+ RUS_law_of_army_desc:"国の国防予算を大きく陸軍に使う法を制定することで、我が国の軍の中で最も多くの資材を陸軍が得られるようになる。これで陸軍は今までにない大規模な改革を行うことができるようになる。"
+ RUS_advance_navy:"海軍省の独立"
+ RUS_advance_navy_desc:"我が国の周りにある大きな海における安全は国防の要である。土地を守るための大海軍のために海軍へ注力しなければならない。そのために、海軍省を独立した国防機関にすべきだ。"
+ RUS_forth_build_plan:"第四次艦隊計画"
+ RUS_forth_build_plan_desc:"この数年で世界各国の海軍は飛躍的に拡大している。我が国も大規模な主力艦建造計画を実行し、次の大戦争でバルト海や太平洋を守れる強さを確保しなければならない。"
+ RUS_air_generations:"新世代の航空機"
+ RUS_air_generations_desc:"航空技術は最新であればあるほど戦果に直結し、趨勢を決定するのは前の大戦争で学んだ通りだ。今回こそは各国よりも速い航空研究のために投資する必要がある。"
+ RUS_indp_air:"空軍の独立"
+ RUS_indp_air_desc:"空軍はその用途の多さからもはや陸軍や海軍から独立した独自の兵科であっても悪くはないだろう。先進的研究のために専門的な空軍を設立する"
+ RUS_op_airforce:"作戦空軍"
+ RUS_op_airforce_desc:"空軍は独自の作戦を持つべきだ。陸軍や海軍の支援も必要だが、空軍によって練られた計画に従った航空戦こそ新たな戦争の姿といえる。"]
+ RUS_air_money_for_develop:"開発部門への予算"
+ RUS_air_money_for_develop_desc:"航空機は結局のところその技術力が重視される。より多くの予算を開発者と研究者に与えなければ、航空戦の長期的な勝利は見込めないだろう。"
+ RUS_air_money_for_battle:"戦術部門への予算"
+ RUS_air_money_for_battle_desc:"我が国の空軍の特徴は独立性だ。戦術を立案する部門により多くの予算を与えることで、画期的な戦術による航空戦への有利な影響を見込めるだろう。"
+ RUS_long_range_fighter:"長距離飛行"
+ RUS_long_range_fighter_desc:"我が国の領土は広大で、航続距離の短い航空機は使うことすら無意味だ。国家独自の設計によって長距離化を実現することで、より多くの航空機を前線に投入できるようにする。"
+ RUS_air_research_center:"先進航空研究局"
+ RUS_air_research_center_desc:"政府によって建てられた先進航空技術を研究する航空局は、ロシア全土の研究機関と密接に連携し、明日の戦場で勝利を掴む最新技術の研究を行っている。"
+ cat_air_engine:"エンジン技術"
+ RUS_air_next_engine:"次世代エンジンの開発"
+ RUS_air_next_engine_desc:"国内で行われている研究によって、新たな技術を用いたより効率的なエンジンが開発できるようになった。この開発事業に投資し、我が国の航空機が空を支配するようにするのだ。"
+ RUS_air_power:"火力による圧倒"
+ RUS_air_power_desc:"航空機に積載できる大砲をさらに高火力なものへと変えることで、航空戦における絶対的な有利を確保することができる。陸軍軍需企業との連携で陸戦兵器級の機関砲を搭載する事業を始めようではないか。"
+ RUS_air_rader:"航空探知への投資"
+ RUS_air_rader_desc:"航空戦における情報の優位は決定的な物だ。雲の中から我々の位置を知っている航空隊が出てくれば、たちまち我が航空隊は壊滅に追いやられるだろう。我々の土地で戦うならば、地の利は得ておくものだ。"
+ RUS_air_jet:"ジェットエンジンへの注力"
+ RUS_air_jet_desc:"我が国の研究者が言うには、今までには考えられなかった構造による完全な新しいエンジンの技術開発のめどが立ったとのことだ。これこそ、我が国が空を統べるために必要な技術であることは言うまでもない。"
+ RUS_hammer_of_tsar:"皇帝の鉄槌"
+ RUS_hammer_of_tsar_desc:"とある物理学者が「皇帝の鉄槌」計画について熱心に話している。まだ軍事利用されていない未知のエネルギーを利用した爆弾開発に国家として投資する計画を建てることで、共産主義者の本丸を消し炭にしてやろうではないか。"
+ RUS_arm_armor:"機械化・装甲戦力"
+ RUS_arm_armor_desc:"陸戦において、最も危険なのは敵の弾丸であることは間違えない。であるとしたら、それを弾くような強力な装甲車で戦場を埋め尽くせば、我々は陸戦に勝利できるのではないだろうか？"
+ RUS_arm_tsar_factory:"ツァーリ工場"
+ RUS_arm_tsar_factory_desc:"我が国の大規模な陸軍計画には、工場のさらなる拡張が必要だ。皇帝の名を冠した大工場計画を発動させ、生産力を強化する。"
+ RUS_arm_armor_battle:"装甲戦力への注力"
+ RUS_arm_armor_battle_desc:"我が国の装甲戦力は発展途上だ。大規模な機械化部隊の整備のために、試験的に機械化部隊を少数配備する。"
+ mechanised_infantry:"機械化歩兵"
+ RUS_arm_unite_train:"統一された訓練"
+ RUS_arm_unite_train_desc:"訓練方法を軍内で統一することで、兵士の質の向上と訓練速度の高速化が実現する。一日でも早く新兵を前線に送り込まなければ、我が国の軍隊は即座に敗北するだろう。"
+ RUS_arm_bike_infantry:"自転車歩兵師団の採用"
+ RUS_arm_bike_infantry_desc:"一部の国で使われている自転車歩兵は騎兵のような速度で進撃することができる歩兵だ。自転車の大量生産は難しくないが、馬の大量生産は難しい。これこそ歩兵電撃戦の基礎となるだろう。"
+ RUS_arm_main_tank:"主力戦車"
+ RUS_arm_main_tank_desc:"戦車を陸戦の中心とする戦闘教義を採用し、戦車の汎用性を高めることが軍事革新の要だ。他国が採用しない高機動戦術によって敵を翻弄する。"
+ RUS_arm_radical_motor:"戦車エンジン改革"
+ RUS_arm_radical_motor_desc:"戦車のエンジンをさらに最新のものに変更し、高機動な戦車を前線に潤沢に与えることで、戦場で敵を翻弄することができる。電撃戦戦術の部分的な導入が我が国にはふさわしい。"
+ RUS_arm_armor_fire:"機械化火力"
+ RUS_arm_armor_fire_desc:"火力の中心を砲撃から機械化攻勢へと切り替える。敵の砲弾を弾き、そのうえ敵に砲撃と恐怖を与えることができる機械化部隊が戦場では勝利する。"
+ RUS_arm_armor_fire_1:"機械化火力"
+ RUS_arm_armor_fire_1_desc:"火力の中心を砲撃から機械化攻勢へと切り替える。敵の砲弾を弾き、そのうえ敵に砲撃と恐怖を与えることができる機械化部隊が戦場では勝利する。"
+ RUS_arm_many_armor_infantry:"機械化部隊の量産"
+ RUS_arm_many_armor_infantry_desc:"機械化部隊を標準的なものにするのは不可能だが、一つの戦線を支えるほどの生産ならば我が国であれば可能だろう。生産力によって敵を圧倒するのだ。"
+ RUS_arm_all_minitank:"全師団軽戦車計画"
+ RUS_arm_all_minitank_desc:"全ての師団に軽戦車を随伴させることで、装甲戦闘が全ての地において発生し、敵はその戦術に対する対策で大きく後退する。これこそがロシアの戦術であることを見せつけるべきだ。"
+ RUS_arm_modern_tank:"現代戦車の運用"
+ RUS_arm_modern_tank_desc:"現代戦車は、我々が手が届く範囲で最も強い戦車であることは間違えない。敵よりも早くこれを実践投入することで、さらに強力な攻勢作戦までも可能にしてしまうだろう。"
