--- a/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
+++ b/localisation/TR_focus/japanese/TR_RUS_focus_l_japanese.yml
@@ -205,3 +205,7 @@
  RUS_arm_all_minitank_desc:"全ての師団に軽戦車を随伴させることで、装甲戦闘が全ての地において発生し、敵はその戦術に対する対策で大きく後退する。これこそがロシアの戦術であることを見せつけるべきだ。"
  RUS_arm_modern_tank:"現代戦車の運用"
  RUS_arm_modern_tank_desc:"現代戦車は、我々が手が届く範囲で最も強い戦車であることは間違えない。敵よりも早くこれを実践投入することで、さらに強力な攻勢作戦までも可能にしてしまうだろう。"
+ RUS_conscription_more:"さらなる徴兵"
+ RUS_conscription_more_desc:"我が国の徴兵制度は十分に機能していない。各地の徴兵局の規模を拡大することで、徴兵漏れを減らし、全ての男子が国にその命を捧げられる帝国体制を築き上げる。"
+ RUS_more_nocore:"海外の義勇軍"
+ RUS_more_nocore_desc:"我が国のほとんどは中核的な我が国固有の領土であるが、そうでない土地にいる国民もまた、我が国の軍に守られているのだ。では、どうして彼らが徴兵から逃れられるのだろうか？"
