--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -3,6 +3,8 @@
  RUS_winner_of_wwi_desc: "大戦争では、ロシアの軍隊は革命を起こしたドイツ相手に勇敢に戦い、栄光ある勝利を掴んだ。皇帝の権威は国内外を問わず響き渡り、今日の帝国の土台となっている。"
  RUS_winner_of_wwi_1: "大戦争の勝者"
  RUS_winner_of_wwi_1_desc: "大戦争では、ロシアの軍隊は革命を起こしたドイツ相手に勇敢に戦い、栄光ある勝利を掴んだ。皇帝の権威は国内外を問わず響き渡り、今日の帝国の土台となっている。"
+ RUS_winner_of_wwi_2: "大戦争の勝者"
+ RUS_winner_of_wwi_2_desc: "大戦争では、ロシアの軍隊は革命を起こしたドイツ相手に勇敢に戦い、栄光ある勝利を掴んだ。皇帝の権威は国内外を問わず響き渡り、今日の帝国の土台となっている。"
  RUS_wwi_army: "大戦争の軍隊"
  RUS_wwi_army_desc: "ロシア帝国軍は先の大戦争の遺産を大きく抱えている。近代化の途上で発生した戦争による勝利体験は、陸軍による無駄な突撃戦術を長く維持させることになってしまった。"
  RUS_nomad_of_russia: "遊牧民"
