海軍ツリー完成

--- a/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_RUS_ideas_l_japanese.yml
@@ -70,3 +70,4 @@
  RUS_op_air_1_desc:"この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
  RUS_op_air_2:"作戦空軍"
  RUS_op_air_2_desc:"この国の空軍は独自の作戦機関を持ち、独立した意志で動いている。"
+ RUS_cc:"ロシア空母艦隊"
