Second American Civil War

--- a/localisation/TR_events/japanese/TR_USA_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_USA_events_l_japanese.yml
@@ -1,4 +1,37 @@
 ﻿l_japanese:
+ TR_usa_election.1.t: "1936アメリカ合衆国大統領選挙"
+ TR_usa_election.1.d: "今日ついに選挙が始まる。彼女が微笑むのは一体誰なのか。"
+ TR_usa_election.1.a: "全ては民衆の意思に委ねられる"
+ TR_usa_election.2.t: "選挙人選挙"
+ TR_usa_election.2.d: "本年度も選挙人選挙が始まった。終わりはすぐそばに近づいている。"
+ TR_usa_election.2.a: "大丈夫だ。きっと勝てるはず"
+ TR_usa_election.3.t: "社会党の勝利"
+ TR_usa_election.3.d: "選挙はついに終結した。民主党でも、共和党でもない新しい大統領だ。民衆は彼に期待を寄せる。だが、不穏な気配はすぐそばへ近づいている。"
+ TR_usa_election.3.a: "大統領万歳！"
+ TR_usa_election.4.t: "新大統領就任"
+ TR_usa_election.4.d: "新たな大統領がついに就任した。彼は新たなアメリカの時代を彩る人物となるであろう。・・・戦いに勝つことができれば。"
+ TR_usa_election.4.a: "空は曇っている、今にも雨が降りそうだ"
+ TR_usa_election.5.t: "連合国独立宣言"
+ TR_usa_election.5.d: "不穏の予感はあたった。南部において右派勢力が独立を宣言した。他の州も今は合衆国に残っているが離脱は時間の問題だろう。"
+ TR_usa_election.5.a: "また同じ過ちを犯すのか？"
+ TR_usa_election.6.t: "ミシシッピ州などが合衆国から離脱"
+ TR_usa_election.6.d: "ミシシッピ州は本日合衆国からの離脱を宣言。そして連合国への加入も決定された。近隣の他の州もそれに追随する。"
+ TR_usa_election.6.a: "なんということだ"
+ TR_usa_election.7.t: "テキサス州が合衆国から離脱"
+ TR_usa_election.7.d: "テキサス州は本日合衆国からの離脱を宣言。そして連合国への加入も決定された。"
+ TR_usa_election.7.a: "なんということだ"
+ TR_usa_election.8.t: "カロライナが合衆国から離脱"
+ TR_usa_election.8.d: "カロライナは本日合衆国からの離脱を宣言。そして連合国への加入も決定された。近隣の他の州もそれに追随する。"
+ TR_usa_election.8.a: "なんということだ"
+ TR_usa_election.9.t: "国境地帯での軍事的衝突"
+ TR_usa_election.9.d: "合衆国と連合国との間で軍事的紛争が発生した。アメリカの自由はどうなるのか？"
+ TR_usa_election.9.a: "国外逃亡の準備をしておこう"
+ TR_usa_election.10.t: "避けられぬ運命"
+ TR_usa_election.10.d: "ついに沈黙は破られた。連合国政府は本日未明、合衆国政府へと宣戦布告をした。"
+ TR_usa_election.10.a: "自由のために"
+ TR_usa_civil_war.1.t: "第二次南北戦争"
+ TR_usa_civil_war.1.d: "アメリカ連合国は本日未明、アメリカ合衆国への宣戦布告を行った。これは先日の選挙で勝利した社会主義者に対する叛乱であり、アメリカの右派勢力の団結でもある。"
+ TR_usa_civil_war.1.a: "自由は死んだ"
  TR_usa_civil_war.2.t: "南部でアメリカ連合国が独立を宣言"
  TR_usa_civil_war.2.d: ""
  TR_usa_civil_war.2.a: "..."
