--- a/localisation/japanese/factions_l_japanese.yml
+++ b/localisation/japanese/factions_l_japanese.yml
@@ -111,3 +111,4 @@
  Pacific_Pact: "太平洋条約"
  security_diamond: "セキュリティ・ダイヤモンド"
  jap_Greater_East_Asian_Co-prosperity_Sphere_concept: "大東亜共栄圏"
+ FRA_international: "インターナショナルの相互支援"
