とりあえず途中

--- a/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
+++ b/localisation/TR_characters/japanese/TR_characters_l_japanese.yml
@@ -30,6 +30,7 @@
  JAP_Showa_Emperor: "昭和天皇"
  JAP_Toyotomi: "豊臣家"
  OTT_Caliph_Abdulmecid_II: "アブデュルメジト2世"
-FRA_ludovic_oscar_frossard: "ルドヴィック＝オスカー・フロッサール"
+ FRA_ludovic_oscar_frossard: "ルドヴィック＝オスカー・フロッサール"
 
-GER_karl_liebknecht: "カール・リープクネヒト"
+ GER_karl_liebknecht: "カール・リープクネヒト"
+ MAN_Zhang_Zuolin: "張作霖"
