ルーマニア大体完成

--- a/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
+++ b/localisation/TR_cosmetics/japanese/TR_cosmetic_l_japanese.yml
@@ -122,5 +122,15 @@
  MDR_ADJ: "パンノニア"
  MDR_autonomy_cleansing_area: "パンノニア浄化区域"
  MDR_autonomy_cleansing_area_DEF: "パンノニア浄化区域"
+
+CZESLO: "チェコスロバキア国"
+CZESLO_DEF: "チェコスロバキア国"
+CZEZPL: "ザパドスラヴィア"
+CZEZPL_DEF: "ザパドスラヴィア"
+HROM: "神聖ローマニア軍団国"
+HROM_DEF: "神聖ローマニア軍団国"
+
+HBUL: "モエシア＝トラキア文化再生地域"
+HBUL_DEF: "モエシア＝トラキア文化再生地域"
  
  
