--- a/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_super_events_l_japanese.yml
@@ -8,3 +8,6 @@
  SE_American_Civil_War_Title: "第二次アメリカ内戦"
  SE_American_Civil_War_Desc: "アメリカン・ドリームと呼ばれる理由は、\nそれを信じるために眠っていなければならないからだ\n\n―ジョージ・カーリン"
  SE_American_Civil_War_Button: "団結よ永遠にあれ"
+ SE_Japan_China_war_Title: "日中戦争"
+ SE_Japana_China_war_Desc: "国破れて山河在り、\n城春にして草木深し　\n\n-杜甫"
+ SE_Japan_China_war_Button: "天皇陛下の御為に"
