Drum links, zwei, drei!

--- a/localisation/TR_musics/TR_super_event_music_l_english.yml
+++ b/localisation/TR_musics/TR_super_event_music_l_english.yml
@@ -3,3 +3,4 @@ l_english:
  super_event_music_TITLE:0 "super_music Radio"
  risorgimento_italiano:0 "risorgimento_italiano"
  when_johnny_comes_marching_home:0 "when_johnny_comes_marching_home"
+ einheitsfrontlied:0 "einheitsfrontlied"
