ルーマニア完成編

--- a/localisation/TR_ideas/japanese/TR_ROM_ideas_l_japanese.yml
+++ b/localisation/TR_ideas/japanese/TR_ROM_ideas_l_japanese.yml
@@ -7,4 +7,7 @@
  TR_ROM_BUL: "モエシア＝トラキア文化再生"
  TR_ROM_BUL1: "モエシア＝トラキア文化再生"
  TR_ROM_join: "入植活動"
- ROM_RUSarmy: "動員の拡大"
+ TR_ROM_RUSarmy: "動員の拡大"
+ TR_ROM_tate: "中立の盾"
+TR_ROM_gold: "ブルガリアの資産没収"
+TR_ROM_BULgold: "ブルガリアの資産没収"
