--- a/localisation/TR_events/japanese/TR_SPR_civwar_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_SPR_civwar_events_l_japanese.yml
@@ -9,9 +9,13 @@
  TR_spain.2.a: "これは厄災だ！"
  TR_spain.2.b: "王党派でプレイ"
  TR_spain.2.c: "共産派でプレイ"
- TR_spain.2.b: "無政府派でプレイ"
- TR_spain.2.e: "カタルーニャでプレイ"
- TR_spain.2.f: "ナバラでプレイ"
+ TR_spain.2.e: "他の選択肢は？"
+
+ TR_spain.4.t: "他の選択肢"
+ TR_spain.4.d: "スペイン内戦が大好きな君にほかの選択肢を用意した"
+ TR_spain.4.a: "無政府派でプレイ"
+ TR_spain.4.b: "カタルーニャでプレイ"
+ TR_spain.4.c: "ナバラでプレイ"
 
  TR_spain.3.t: "スペイン内戦！"
  TR_spain.3.d: "我々の政府としての信用が失墜したことでトレドのカトリック教会が我々を見限った"
