バルカン戦争加筆

--- a/localisation/TR_events/japanese/TR_balkan_war_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_balkan_war_l_japanese.yml
@@ -12,6 +12,19 @@
  TR_balkan.11.t: "バルカン戦争"
  TR_balkan.12.t: "バルカン戦争"
  TR_balkan.13.t: "チャコスロバキアの夢"
+ TR_balkan.1.d: "セルビア民族解放運動の気運"
+ TR_balkan.2.d: "軍部が進行計画を提案"
+ TR_balkan.3.d: "ルーマニアとの密約"
+ TR_balkan.4.d: "セルビアからの密使"
+ TR_balkan.5.d: "ルーマニアが同盟を承認"
+ TR_balkan.6.d: "徴兵の拡大"
+ TR_balkan.7.d: "セルビアの動向"
+ TR_balkan.8.d: "最高民族解放宣言"
+ TR_balkan.9.d: "セルビアからの最後通牒"
+ TR_balkan.10.d: "ハンガリーが最後通牒を拒否"
+ TR_balkan.11.d: "バルカン戦争"
+ TR_balkan.12.d: "火薬庫は遂に爆発した。先の大戦の不十分な戦後処理によって発生した軋轢が、一度しけった火薬庫を再び爆発させたのである。\n先の大戦の勝者たちは大いなる敵を見るがあまり、功労者への報奨を忘れた。そして新たな火種を生んでしまった。この半島に十五年間あったものは偽りの平和であったのだ。\n\nもしセルビア、ルーマニア両国の要求が十分に満たされていたのならばどうであっただろうか。決してこのような悲劇はおこらなかった。確信してそう言える。あらゆる不幸により、この戦争は世界が次なる渾沌へと突き進む遠因へとなるであろう。\nこの戦争で笑うのは誰だろうか。この戦争で涙を流すのは誰だろうか。\nだが一つ確かに言えることがある。それはこの戦争の当事国ではないということだ。"
+ TR_balkan.13.d: "チャコスロバキアの夢"
  TR_balkan.1.a: "対処が必要だな"
  TR_balkan.2.a: "良きにはからえ"
  TR_balkan.3.a: "果報を待とう"
