--- a/localisation/TR_events/japanese/TR_SPR_civwar_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_SPR_civwar_events_l_japanese.yml
@@ -21,3 +21,7 @@
  TR_spain.3.d: "我々の政府としての信用が失墜したことでトレドのカトリック教会が我々を見限った"
  TR_spain.3.a: "これは厄災だ！"
  TR_spain.3.b: "神権派でプレイ"
+
+TR_spain_news.1.t: "スペイン内戦！"
+TR_spain_news.1.d: "スペインから緊急のニュースが届いた。王政廃止以降不安定だった共和国政府は今月2がつの選挙で最高潮に達した派閥間の対立を抑えられなくなり、一部の軍部が共和国政府を見限り国粋スペインとして蜂起した。まだこの時では共和国政府が優勢であり、鎮圧は直ぐに終わるものと思われていたが、これを皮切りに共産主義者、無政府主義者、王党派、ナバラとカタルーニャの分離主義者が次々に蜂起し、スペインはついに完全な内戦状態に陥った...."
+TR_spain_news.1.a: "スペインの共和制は終わってしまうのだろうか？"
