ろからいず

--- a/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
+++ b/localisation/TR_events/japanese/TR_RUS_events_l_japanese.yml
@@ -179,3 +179,7 @@
  TR_Russia_diplo.13.t:"[FROM.GetName]が防共協定を拒否"
  TR_Russia_diplo.13.d:"[FROM.GetName]の外務担当者は愚かにも、我が国の防共協定の提案を拒否し、交渉を打ち切ると伝えてきた。これはかの国の政府がすでに共産主義に侵食されていることの確固たる証拠であり、この国もいずれ共産主義に飲み込まれてしまうだろう。我々はそれを黙って見ることしかできないようだ。"
  TR_Russia_diplo.13.a:"愚か者め！"
+ TR_Russia_diplo.14.t: "テスト:防共協定の履行"
+ TR_Russia_diplo.14.d: "テスト:防共協定参加国が赤共に攻撃されました。選択を選んでください。"
+ TR_Russia_diplo.14.a: "テスト:履行します"
+ TR_Russia_diplo.14.b: "テスト:記憶にございません"
