中華調整いろいろ

--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -1396,8 +1396,8 @@
  GXC_fascism_DEF: "第三広西軍閥"
  GXC_democratic: "広西独立共和国"
  GXC_democratic_DEF: "広西独立共和国"
- GXC_neutrality: "広西軍閥"
- GXC_neutrality_DEF: "広西軍閥"
+ GXC_neutrality: "広西"
+ GXC_neutrality_DEF: "広西"
  GXC_communism: "珠江社会主義共和国"
  GXC_communism_DEF: "珠江社会主義共和国"
  GXC_fascism_ADJ: "広西"
@@ -6403,4 +6403,20 @@
  IRC: "イロコイ連邦"
  IRC_DEF: "イロコイ連邦"
  IRC_ADJ: "イロコイ"
+
+ BKN_fascism: "武漢人民国"
+ BKN_fascism_DEF: "武漢人民国"
+ BKN_democratic: "武漢共和国"
+ BKN_democratic_DEF: "武漢共和国"
+ BKN_neutrality: "武漢"
+ BKN_neutrality_DEF: "武漢"
+ BKN_communism: "武漢社会主義共和国"
+ BKN_communism_DEF: "武漢社会主義共和国"
+ BKN_fascism_ADJ: "武漢"
+ BKN_democratic_ADJ: "武漢"
+ BKN_neutrality_ADJ: "武漢"
+ BKN_communism_ADJ: "武漢"
+ BKN: "武漢"
+ BKN_DEF: "武漢"
+ BKN_ADJ: "武漢"
 
