--- a/localisation/japanese/countries_l_japanese.yml
+++ b/localisation/japanese/countries_l_japanese.yml
@@ -1422,20 +1422,20 @@
  SHX: "山西"
  SHX_DEF: "山西"
  SHX_ADJ: "山西"
- XSM_fascism: "西北三馬自由国"
- XSM_fascism_DEF: "西北三馬自由国"
+ XSM_fascism: "西北自由国"
+ XSM_fascism_DEF: "西北自由国"
  XSM_democratic: "回共和国"
  XSM_democratic_DEF: "回共和国"
- XSM_neutrality: "西北三馬"
- XSM_neutrality_DEF: "西北三馬"
- XSM_communism: "馬人民共和国"
- XSM_communism_DEF: "馬人民共和国"
- XSM_fascism_ADJ: "馬"
- XSM_democratic_ADJ: "馬"
+ XSM_neutrality: "馬家軍"
+ XSM_neutrality_DEF: "馬家軍"
+ XSM_communism: "西北人民共和国"
+ XSM_communism_DEF: "西北人民共和国"
+ XSM_fascism_ADJ: "西北"
+ XSM_democratic_ADJ: "西北"
  XSM_neutrality_ADJ: "馬"
- XSM_communism_ADJ: "馬"
- XSM: "西北三馬"
- XSM_DEF: "西北三馬"
+ XSM_communism_ADJ: "西北"
+ XSM: "馬家軍"
+ XSM_DEF: "馬家軍"
  XSM_ADJ: "馬"
  MEN_fascism: "蒙古国"
  MEN_fascism_DEF: "蒙古国"
